# pages-sharing-tool

./: .gitignore  README.md  install.sh  pyproject.toml  uninstall.sh
docs/: 2026-02-03-phase2-apps-design.md  2026-02-03-phase2-apps-plan.md  2026-02-05-phase3-tunnel-design.md  DESIGN.md  README-human.md  backlog.md
skills/: drop.md  pages-sharing.md
src/drop/: __init__.py  cli.py  server.py  storage.py  utils.py
src/pst/: __init__.py  cli.py  server.py  storage.py  utils.py
