[project]
name = "pages-sharing-tool"
version = "0.1.0"
description = "Securely publish static pages with password protection"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
]

[project.scripts]
pst = "pst.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pst"]
