[project]
name = "agent-instant-drop"
version = "0.2.0"
description = "Drop any file, app, or prototype to your human"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "flask>=3.0",
]

[project.scripts]
drop = "drop.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drop"]
